--- a/index.html
+++ b/index.html
@@ -69,5 +69,23 @@
         </div>
     </header>
 
+    <main>
+        <section class="topo-do-site" id="inicio">
+            <div class="interface">
+                <div class="flex">
+                    <div class="txt-topo-site">
+                        <h1>TRANSFORMANDO IDEIAS EM REALIDADE DIGITAL<span>.</span></h1>
+                        <p>Criatividade e inovação andam lado a lado. Com uma combinação única de design impactante,
+                            funcionalidade intuitiva e otimização para resultados, estou pronto(a) para criar a presença
+                            online dos seus sonhos.</p>
+                    </div>
+
+                    <div class="img-topo-site">
+                        <img src="images/imgtopo.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+
   </body>
 </html>
