--- a/index.html
+++ b/index.html
@@ -87,5 +87,38 @@
             </div>
         </section>
 
+        <section class="sobre" id="sobre">
+            <div class="interface">
+                <div class="flex">
+                    <div class="img-sobre">
+                        <img src="images/foto.png" alt="">
+                    </div>
+
+                    <div class="txt-sobre">
+                        <h2>MUITO PRAZER, <span>SOU KEVIN BAFINI.</span></h2>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. At accusantium ducimus dicta
+                            suscipit, neque cumque sunt tenetur totam delectus magnam minus ratione. Quidem sequi velit
+                            voluptatibus eos omnis ullam officiis.</p>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam quidem quae iusto repellendus
+                            eaque, ipsum sed voluptate explicabo voluptas, dolorum porro sequi laudantium? Obcaecati
+                            quae, dolores illo officiis a numquam.</p>
+                        <div class="btn-social">
+                            <a href="https://www.instagram.com/kevin.bafini"><button><i
+                                        class="bi bi-instagram"></i></button></a>
+
+                            <a href="https://www.linkedin.com/in/kevinbafini/"><button><i
+                                        class="bi bi-linkedin"></i></button></a>
+
+                            <a href="https://github.com/Kevinbafini"><button><i 
+                                        class="bi bi-github"></i></button></a>
+
+                            <a href="https://wa.me/5517991606869"><button><i 
+                                            class="bi bi-whatsapp"></i></button></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </section>
   </body>
 </html>
