--- a/index.html
+++ b/index.html
@@ -120,5 +120,47 @@
             </div>
             </div>
         </section>
+
+        <section class="habilidades" id="habilidades">
+            <div class="interface">
+                <h2 class="titulo">MINHAS <span>HABILIDADES.</span></h2>
+
+                <div class="flex">
+                    <div class="habilidades-box">
+                        <i class="fa-brands fa-html5"></i>
+                        <h3>HTML5</h3>
+                    </div>
+
+                    <div class="flex">
+
+                        <div class="habilidades-box">
+                            <i class="fa-brands fa-css3-alt"></i>
+                            <h3>CSS3</h3>
+                        </div>
+
+                        <div class="flex">
+                            <div class="habilidades-box">
+                                <i class="fa-brands fa-js"></i>
+                                <h3>JAVASCRIPT</h3>
+                            </div>
+                        </div>
+
+                        <div class="flex">
+                            <div class="habilidades-box">
+                                <i class="fa-brands fa-php"></i>
+                                <h3>PHP</h3>
+                            </div>
+                        </div>
+
+                        <div class="flex">
+                            <div class="habilidades-box">
+                                <img src="images/c_sharp.png" />
+                                <h3>C#</h3>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+        </section>
   </body>
 </html>
