--- a/index.html
+++ b/index.html
@@ -190,5 +190,25 @@
                 </div>
             </div>
         </section>
+
+
+        <section class="portfolio" id="projetos">
+            <div class="interface">
+                <h2 class="titulo">MEUS <span>PROJETOS.</span></h2>
+                <div class="flex">
+                    <div class="img-port" style="background-image: url(images/img1.png);">
+                        <div class="overlay">Tela de Login</div>
+                    </div>
+                    <div class="img-port" style="background-image: url(images/img2.png);">
+                        <div class="overlay">Modelo de Loja Online</div>
+                    </div>
+                    <div class="img-port" style="background-image: url(images/img3.png);">
+                        <div class="overlay">Relógio e Data Web Digital</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+    </main>
   </body>
 </html>
