--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="style.css" />
-    <script src="menu.js" defer></script>
+    <script src="script.js" defer></script>
     <title>Kevin Developer</title>
 </head>
 <link rel="icon" type="image.png" href="images/logo.png" />
