ajuste no css do btn sociais

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
             <ul class="footer_lista">
                 <li><a href="#especialidades" class="footer_links">Especialidades</a></li>
                 <li><a href="#projetos" class="footer_links">Projetos</a></li>
-                <li><a href="#inicio" class="footer_links">Contatos</a></li>
+                <li><a href="https://wa.me/5517991606869" class="footer_links">Contatos</a></li>
 
             </ul>
         </div>
