--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
             <div class="interface">
                 <div class="flex">
                     <div class="txt-topo-site">
-                        <h1>TRANSFORMANDO IDEIAS EM REALIDADE DIGITAL<span>.</span></h1>
-                        <p>Criatividade e inovação andam lado a lado. Com uma combinação única de design impactante,
-                            funcionalidade intuitiva e otimização para resultados, estou pronto(a) para criar a presença
-                            online dos seus sonhos.</p>
+                        <h1>CONVERTENDO VISÕES EM SUCESSOS DIGITAIS<span>.</span></h1>
+                        <p>Inovação e criatividade é o coração do que faço. Com uma abordagem focada em soluções
+                            criativas e execução precisa, estou preparado para transformar sua visão em uma realidade
+                            digital inesquecível!</p>
                     </div>
 
                     <div class="img-topo-site">
@@ -88,13 +88,11 @@
                     </div>
 
                     <div class="txt-sobre">
-                        <h2>MUITO PRAZER, <span>SOU KEVIN BAFINI.</span></h2>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. At accusantium ducimus dicta
-                            suscipit, neque cumque sunt tenetur totam delectus magnam minus ratione. Quidem sequi velit
-                            voluptatibus eos omnis ullam officiis.</p>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam quidem quae iusto repellendus
-                            eaque, ipsum sed voluptate explicabo voluptas, dolorum porro sequi laudantium? Obcaecati
-                            quae, dolores illo officiis a numquam.</p>
+                        <h2>UM PRAZER CONHECÊ-LO, <span>SOU KEVIN BAFINI.</span></h2>
+                        <p>Olá pessoal! Meu nome é Kevin Bafini, tenho 18 anos e estudo programação desde 2022. Apaixonado pelas
+                            tecnologias, dedico-me a explorar e aplicar novas soluções em desenvolvimento de software e aplicações web.
+                        </p>
+
                         <div class="btn-social">
                             <a href="https://www.instagram.com/kevin.bafini"><button><i
                                         class="bi bi-instagram"></i></button></a>
@@ -161,22 +159,24 @@
                     <div class="especialidades-box">
                         <i class="bi bi-code-square"></i>
                         <h3>Website</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, nulla rem dolore inventore
-                            delectus at.</p>
+                        <p>Com o foco em websites modernos e eficazes, focados em design responsivo e experiências de
+                            usuário
+                            otimizadas.</p>
                     </div>
 
                     <div class="especialidades-box">
                         <i class="bi bi-cart"></i>
                         <h3>Loja online</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, nulla rem dolore inventore
-                            delectus at.</p>
+                        <p>As nossas plataformas de e-commerce são robustas e intuitivas, projetadas para maximizar as
+                            vendas.</p>
                     </div>
 
                     <div class="especialidades-box">
-                        <i class="bi bi-wordpress"></i>
-                        <h3>Blog</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, nulla rem dolore inventore
-                            delectus at.</p>
+                        <i class="bi bi-joystick"></i>
+                        <h3>Games Interativos</h3>
+                        <p>Desenvolvemos games educativos que transformam o aprendizado em uma jornada interativa e
+                            divertida.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -187,6 +187,15 @@
             <div class="interface">
                 <h2 class="titulo">MEUS <span>PROJETOS.</span></h2>
                 <div class="flex">
+                    <div class="img-port" style="background-image: url(images/img1.png);">
+                        <div class="overlay">Tela de Login</div>
+                    </div>
+                    <div class="img-port" style="background-image: url(images/img2.png);">
+                        <div class="overlay">Modelo de Loja Online</div>
+                    </div>
+                    <div class="img-port" style="background-image: url(images/img3.png);">
+                        <div class="overlay">Relógio e Data Web Digital</div>
+                    </div>
                     <div class="img-port" style="background-image: url(images/img1.png);">
                         <div class="overlay">Tela de Login</div>
                     </div>
@@ -230,7 +239,7 @@
 
             <ul class="footer_lista">
 
-                <li>
+                <li class="h3">
                     <h3>Veja mais!</h3>
                 </li>
 
@@ -241,6 +250,11 @@
             </ul>
 
             <ul class="footer_lista">
+
+                <li>
+                    <h3>ㅤ</h3>
+                </li>
+
                 <li><a href="#especialidades" class="footer_links">Especialidades</a></li>
                 <li><a href="#projetos" class="footer_links">Projetos</a></li>
                 <li><a href="https://wa.me/5517991606869" class="footer_links">Contatos</a></li>
