--- a/index.html
+++ b/index.html
@@ -89,8 +89,10 @@
 
                     <div class="txt-sobre">
                         <h2>UM PRAZER CONHECÊ-LO, <span>SOU KEVIN BAFINI.</span></h2>
-                        <p>Olá pessoal! Meu nome é Kevin Bafini, tenho 18 anos e estudo programação desde 2022. Apaixonado pelas
-                            tecnologias, dedico-me a explorar e aplicar novas soluções em desenvolvimento de software e aplicações web.
+                        <p>Olá pessoal! Meu nome é Kevin Bafini, tenho 18 anos e estudo programação desde 2022.
+                            Apaixonado pelas
+                            tecnologias, dedico-me a explorar e aplicar novas soluções em desenvolvimento de software e
+                            aplicações web.
                         </p>
 
                         <div class="btn-social">
@@ -112,7 +114,7 @@
 
         <section class="habilidades" id="habilidades">
             <div class="interface">
-                <h2 class="titulo">MINHAS <span>HABILIDADES.</span></h2>
+                <h2 class="titulo">MINHAS <span>HABILIDADES</span></h2>
 
                 <div class="flex">
                     <div class="habilidades-box">
@@ -154,27 +156,26 @@
 
         <section class="especiliadades" id="especialidades">
             <div class="interface">
-                <h2 class="titulo">MINHAS <span>ESPECIALIDADES.</span></h2>
+                <h2 class="titulo">MINHAS <span>ESPECIALIDADES</span></h2>
                 <div class="flex">
                     <div class="especialidades-box">
                         <i class="bi bi-code-square"></i>
                         <h3>Website</h3>
                         <p>Com o foco em websites modernos e eficazes, focados em design responsivo e experiências de
-                            usuário
-                            otimizadas.</p>
+                            usuário otimizadas.</p>
                     </div>
 
                     <div class="especialidades-box">
                         <i class="bi bi-cart"></i>
                         <h3>Loja online</h3>
-                        <p>As nossas plataformas de e-commerce são robustas e intuitivas, projetadas para maximizar as
-                            vendas.</p>
+                        <p>As nossas plataformas de e-commerce ou lojas virtuais online são robustas e intuitivas, projetadas para
+                            maximizar as vendas e atender ao máximo de clientes possíveis.</p>
                     </div>
 
                     <div class="especialidades-box">
                         <i class="bi bi-joystick"></i>
                         <h3>Games Interativos</h3>
-                        <p>Desenvolvemos games educativos que transformam o aprendizado em uma jornada interativa e
+                        <p>Desenvolvemos jogos educativos que transformam o aprendizado em uma jornada interativa e
                             divertida.
                         </p>
                     </div>
@@ -185,7 +186,7 @@
 
         <section class="portfolio" id="projetos">
             <div class="interface">
-                <h2 class="titulo">MEUS <span>PROJETOS.</span></h2>
+                <h2 class="titulo">MEUS <span>PROJETOS</span></h2>
                 <div class="flex">
                     <div class="img-port" style="background-image: url(images/img1.png);">
                         <div class="overlay">Tela de Login</div>
