atualizacao do pj

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
                     <div class="txt-sobre">
                         <h2>UM PRAZER CONHECÊ-LO, <span>SOU KEVIN BAFINI.</span></h2>
-                        <p>Olá pessoal! Meu nome é Kevin Bafini, tenho 18 anos e estudo programação desde 2022.
+                        <p>Olá pessoal! Meu nome é Kevin Bafini, tenho 18 anos e estudo programação desde 2023.
                             Apaixonado pelas
                             tecnologias, dedico-me a explorar e aplicar novas soluções em desenvolvimento de software e
                             aplicações web.
@@ -142,6 +142,13 @@
                                 <h3>PHP</h3>
                             </div>
                         </div>
+	                    
+	                    <div class="flex">
+		                    <div class="habilidades-box">
+			                    <i class="fa-brands fa-laravel"></i>
+			                    <h3>LARAVEL</h3>
+		                    </div>
+	                    </div>
 
                         <div class="flex">
                             <div class="habilidades-box">
