--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
                             <a href="https://github.com/Kevinbafini"><button><i class="bi bi-github"></i></button></a>
 
-                            <a href="https://wa.me/5517991606869"><button><i class="bi bi-whatsapp"></i></button></a>
+                            <a href="https://wa.me/5517991606869?text=Quero fazer o  orçamento para um projeto"><button><i class="bi bi-whatsapp"></i></button></a>
                         </div>
                     </div>
                 </div>
@@ -223,7 +223,7 @@
                         <i class="fa-brands fa-github"></i>
                     </a>
 
-                    <a href="https://wa.me/5517991606869" class="footer_links" id="whatsapp">
+                    <a href="https://wa.me/5517991606869?text=Quero fazer o  orçamento para um projeto" class="footer_links" id="whatsapp">
                         <i class="fa-brands fa-whatsapp"></i>
                     </a>
                 </div>
@@ -249,7 +249,7 @@
 
                 <li><a href="#especialidades" class="footer_links">Especialidades</a></li>
                 <li><a href="#projetos" class="footer_links">Projetos</a></li>
-                <li><a href="https://wa.me/5517991606869" class="footer_links">Contatos</a></li>
+                <li><a href="https://wa.me/5517991606869?text=Quero fazer o  orçamento para um projeto" class="footer_links">Contatos</a></li>
 
             </ul>
         </div>
