--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a href="index.html"><img src="images/logo.png" alt="logo">
                     </a>
             </div>
-
+	        
             <nav class="menu-desktop">
                 <ul>
                     <li><a href="#inicio">Início</a></li>
@@ -195,7 +195,7 @@
                         <div class="overlay">Projeto de Links</div>
                     </div>
                     <div class="img-port" style="background-image: url(images/img6.png);">
-                        <div class="overlay">Quiz Interativo</div>
+                        <div class="overlay">Jogo Interativo</div>
                     </div>
                 </div>
             </div>
