atualizacao de projeto, adiciona novo e remove antigo

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 <h2 class="titulo">MEUS <span>PROJETOS</span></h2>
                 <div class="flex">
                     <div class="img-port" style="background-image: url(images/img1.png);">
-                        <div class="overlay">Tela de Login</div>
+                        <div class="overlay">Jogo da Velha</div>
                     </div>
                     <div class="img-port" style="background-image: url(images/img2.png);">
                         <div class="overlay">Modelo de Loja Online</div>
@@ -201,7 +201,7 @@
                         <div class="overlay">Jogo da Memória</div>
                     </div>
                     <div class="img-port" style="background-image: url(images/img8.png);">
-                        <div class="overlay">footer</div>
+                        <div class="overlay">Tela de Login</div>
                     </div>
                     <div class="img-port" style="background-image: url(images/img9.png);">
                         <div class="overlay">todo list</div>
