--- a/index.html
+++ b/index.html
@@ -129,16 +129,16 @@
 					    <h3>JAVASCRIPT</h3>
 				    </div>
 				    <div class="habilidades-box">
-					    <i class="fa-brands fa-php"></i>
-					    <h3>PHP</h3>
-				    </div>
-				    <div class="habilidades-box">
 					    <i class="fa-brands fa-laravel"></i>
 					    <h3>LARAVEL</h3>
 				    </div>
 				    <div class="habilidades-box">
-					    <img src="images/c_sharp.png" alt="C#">
-					    <h3>C#</h3>
+					    <i class="fa-brands fa-php"></i>
+					    <h3>PHP</h3>
+				    </div>
+				    <div class="habilidades-box">
+					    <i class="fa-brands fa-python"></i>
+					    <h3>PYTHON</h3>
 				    </div>
 			    </div>
 		    </div>
